<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="45dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"/>

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/login"
        android:background="@drawable/button"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp">
        <ImageView
            android:id="@+id/ubg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ubg"/>

        <EditText
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:hint="@string/User"
            android:layout_toEndOf="@+id/ubg"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/user"
        android:background="@drawable/button"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp">
        <ImageView
            android:id="@+id/pbg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pbg"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:hint="@string/Pass"
            android:layout_toEndOf="@+id/pbg"/>
    </RelativeLayout>


    <Button
        android:id="@+id/logbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/LButton"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logbtn"
        android:text="Don't have an account?"
        android:layout_marginStart="110dp"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/directsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignUp"
        android:layout_marginStart="155dp"
        android:text="@string/LButton"
        android:background="@drawable/button"/>

</RelativeLayout>